fixed text wrap on card

--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@
     background-attachment: fixed; 
     background-size: cover;
   }
+
+  .min-w-150 {
+    width: 150px;
+  }
+
